--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -82,8 +82,55 @@ flyout:
       </p>
     </div>
 
-    <div class="ap-text-block">
-      <pre><code><span><span><span>&lt;</span><span>rdf:</span>RDF</span><br>&nbsp;&nbsp;&nbsp;<span><span>xmlns:</span>rdf</span><span><span>=</span><span>&quot;</span>http://www.w3.org/1999/02/22-rdf-syntax-ns#<span>&quot;</span></span><br>&nbsp;&nbsp;&nbsp;<span><span>xmlns:</span>sm</span><span><span>=</span><span>&quot;</span>http://www.mozilla.org/smart-mail/schema#<span>&quot;</span></span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;<span><span>xmlns:</span>schema</span><span><span>=</span><span>&quot;</span>https://schema.org/<span>&quot;</span></span><span>&gt;</span><br>&nbsp;<span><span><span>&lt;</span><span>rdf:</span>Description</span> <span>rdf:nodeID</span><span><span>=</span><span>&quot;</span>n-101<span>&quot;</span></span><br>&nbsp;&nbsp;&nbsp;<span>about</span><span><span>=</span><span>&quot;</span>http://www.mozilla.org/smart-mail/get-mail.cgi?user<span>=</span>waterson&amp;folder<span>=</span>inbox<span>&quot;</span></span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>message</span> <span>id</span><span><span>=</span><span>&quot;</span>4025293<span>&quot;</span></span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>recipient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Chris Waterson &quot;waterson@google.com&quot;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>sm:</span>recipient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>sender</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aunt Helga &quot;helga@ancestry.net&quot;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>sm:</span>sender</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>received-by</span><span>&gt;</span></span>x-wing.mcom.com<span><span><span>&lt;/</span><span>sm:</span>received-by</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>subject</span><span>&gt;</span></span>Great recipe for Banana Bread<span><span><span>&lt;/</span><span>sm:</span>subject</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>sm:</span>body</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>rdf:</span>Description</span> <span>rdf:nodeID</span><span><span>=</span><span>&quot;</span>n-201<span>&quot;</span></span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>name</span><span>&gt;</span></span>Aunt Helga"s World Famous Banana Bread<span><span><span>&lt;/</span><span>schema:</span>name</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>recipeInstructions</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preheat the oven to 350 degrees. Mix in the ingredients in a bowl.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Add the flour last.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pour the mixture into a loaf pan and bake for one hour.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>schema:</span>recipeInstructions</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3 or 4 ripe bananas, smashed.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span>1 egg<span><span><span>&lt;/</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span>3/4 cup of sugar<span><span><span>&lt;/</span><span>schema:</span>recipeIngredient</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>suitableForDiet</span><span>&gt;</span></span>http://schema.org/LowFatDiet<span><span><span>&lt;/</span><span>schema:</span>suitableForDiet</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>cookTime</span><span>&gt;</span></span>PT1H<span><span><span>&lt;/</span><span>schema:</span>cookTime</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>recipeYield</span><span>&gt;</span></span>1 loaf<span><span><span>&lt;/</span><span>schema:</span>recipeYield</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>prepTime</span><span>&gt;</span></span>PT15M<span><span><span>&lt;/</span><span>schema:</span>prepTime</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>rdf:</span>type</span> <span>rdf:resource</span><span><span>=</span><span>&quot;</span>http://schema.org/Recipe<span>&quot;</span></span><span>/&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>nutrition</span> <span>rdf:nodeID</span><span><span>=</span><span>&quot;</span>n-202<span>&quot;</span></span><span>/&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>/rdf:</span>Description</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>rdf:</span>Description</span> <span>rdf:nodeID</span><span><span>=</span><span>&quot;</span>n-301<span>&quot;</span></span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>rdf:</span>type</span> <span>rdf:resource</span><span><span>=</span><span>&quot;</span>http://schema.org/NutritionInformation<span>&quot;</span></span><span>/&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>fatContent</span><span>&gt;</span></span>9 grams fat<span><span><span>&lt;/</span><span>schema:</span>fatContent</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>schema:</span>calories</span><span>&gt;</span></span>240 calories<span><span><span>&lt;/</span><span>schema:</span>calories</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;</span><span>/rdf:</span>Description</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>sm:</span>body</span><span>&gt;</span></span><br>&nbsp;&nbsp;&nbsp;<span><span><span>&lt;/</span><span>sm:</span>message</span><span>&gt;</span></span><br>&nbsp;<span><span><span>&lt;/</span><span>rdf:</span>Description</span><span>&gt;</span></span><br><span><span><span>&lt;/</span><span>rdf:</span>RDF</span><span>&gt;</span></span><span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></span></code></pre>
+    <div class="ap-code-snippet">
+      {% set code_snippet = '
+        <rdf:RDF
+          xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+          xmlns:sm="http://www.mozilla.org/smart-mail/schema#">
+          xmlns:schema="https://schema.org/">
+        <rdf:Description rdf:nodeID="n-101"
+          about="http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox">
+          <sm:message id="4025293">
+            <sm:recipient>
+              Chris Waterson "waterson@google.com"
+            </sm:recipient>
+            <sm:sender>
+              Aunt Helga "helga@ancestry.net"
+            </sm:sender>
+            <sm:received-by>x-wing.mcom.com</sm:received-by>
+            <sm:subject>Great recipe for Banana Bread</sm:subject>
+            <sm:body>
+                <rdf:Description rdf:nodeID="n-201">
+                  <schema:name>Aunt Helga\'s World Famous Banana Bread</schema:name>
+                  <schema:recipeInstructions>
+                    Preheat the oven to 350 degrees. Mix in the ingredients in a bowl.
+                    Add the flour last.
+                    Pour the mixture into a loaf pan and bake for one hour.
+                  </schema:recipeInstructions>
+                  <schema:recipeIngredient>
+                    3 or 4 ripe bananas, smashed.
+                  </schema:recipeIngredient>
+                  <schema:recipeIngredient>1 egg</schema:recipeIngredient>
+                  <schema:recipeIngredient>3/4 cup of sugar</schema:recipeIngredient>
+                  <schema:suitableForDiet>http://schema.org/LowFatDiet</schema:suitableForDiet>
+                  <schema:cookTime>PT1H</schema:cookTime>
+                  <schema:recipeYield>1 loaf</schema:recipeYield>
+                  <schema:prepTime>PT15M</schema:prepTime>
+                  <rdf:type rdf:resource="http://schema.org/Recipe"/>
+                  <schema:nutrition rdf:nodeID="n-202"/>
+                </rdf:Description>
+                <rdf:Description rdf:nodeID="n-301">
+                  <rdf:type rdf:resource="http://schema.org/NutritionInformation"/>
+                  <schema:fatContent>9 grams fat</schema:fatContent>
+                  <schema:calories>240 calories</schema:calories>
+                </rdf:Description>
+              </sm:body>
+          </sm:message>
+        </rdf:Description>
+        </rdf:RDF>
+        ' %}
+      {% set markdown = doc.pod.markdown %}
+      {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
     </div>
   </section>
 
