--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -14,132 +14,141 @@ flyout:
   <section class="ap-logo-stage">
     <div class="ap-logo-stage-content">
       <div class="ap-logo-stage-logo">
-          {% do doc.icons.useIcon('/icons/amp-websites.svg') %}
-          <div class="ap-circular-icon --websites">
-            <svg>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#amp-websites"></use>
-            </svg>
-          </div>
+        {% do doc.icons.useIcon('/icons/amp-websites.svg') %}
+        <div class="ap-circular-icon --websites">
+          <svg>
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#amp-websites"></use>
+          </svg>
+        </div>
+      </div>
+      <div class="ap-text-block">
+        <h1 class="ap-h1 ap-logo-stage-headline">{{ _('RDF in Fifty Words or Less') }}</h1>
       </div>
     </div>
   </section>
 
-  <section class="ap-section --offset">
-    <div class="ap-text-block">
-      <h1>{{ _('RDF in Fifty Words or Less') }}</h1>
+  <section class="ap-section ap-text-aside">
+    <div class="ap-text-aside-item">
+      <div class="ap-text-block">
+        <p>
+          {{ _('Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things.') }}
+        </p>
+      </div>
+    </div>
+
+    <div class="ap-text-aside-item">
+      <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
+        <h2>
+        {{ _('First, RDF is a graph&#x2013;based model for describing Internet <i>resources</i> (like web pages and email messages), and how these resources relate to one another.') }}
+        </h2>
+      </div>
+    </div>
+
+    <div class="ap-text-aside-item">
+      <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
+        <p>
+        {{ _('But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organising Internet resources.') }}
+        </p>
+        <p>
+        {{ _('Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organise your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier).') }}
+        </p>
+        <p>
+        {{ _('But a web page is just one kind of Internet resource. There are tons of others, including email messages, reddit articles, RSS feeds, and search results from your favorite web crawler, just to name a few. And fundamentally, there&#x0027;s no reason that you shouldn&#x0027;t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define.') }}
+        </p>
+        <p>
+        {{ _('And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh&#x0027;s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; colour coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once.') }}
+        </p>
+        <p>
+        {{ _('The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine.') }}</p>
+        <p>{{ _('But wait, there&#x0027;s more...') }}
+        </p>
+      </div>
     </div>
   </section>
 
-  <section class="ap-section --offset">
-    <div class="ap-text-block">
-      <p>
-        {{ _('Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things.') }}
-      </p>
+  <section class="ap-section ap-text-aside">
+    <div class="ap-text-aside-item">
+      <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
+        <h2>
+        {{ _('Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;.') }}
+        </h2>
+      </div>
     </div>
 
-    <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
-      <h2>
-      {{ _('First, RDF is a graph&#x2013;based model for describing Internet <i>resources</i> (like web pages and email messages), and how these resources relate to one another.') }}
-      </h2>
+    <div class="ap-text-aside-item">
+      <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
+        <p>
+        {{ _('Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service.') }}
+        </p>
+        <p>
+        {{ _('Let&#x0027;s go back to our bookmark example. Say that one of my bookmark &#x201C;folders&#x201D; is really a pointer to my email inbox: when I open that folder, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! All the messages that I&#x0027;ve received over night appear.') }}
+        </p>
+        <p>
+        {{ _('But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialised RDF</i>, which is basically just a way of formatting a graph into <a href="https://developer.mozilla.org/en-US/docs/XML_introduction">XML</a>:') }}
+        </p>
+      </div>
     </div>
 
-    <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
-      <p>
-      {{ _('But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organising Internet resources.') }}
-      </p>
-      <p>
-      {{ _('Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organise your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier).') }}
-      </p>
-      <p>
-      {{ _('But a web page is just one kind of Internet resource. There are tons of others, including email messages, reddit articles, RSS feeds, and search results from your favorite web crawler, just to name a few. And fundamentally, there&#x0027;s no reason that you shouldn&#x0027;t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define.') }}
-      </p>
-      <p>
-      {{ _('And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh&#x0027;s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; colour coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once.') }}
-      </p>
-      <p>
-      {{ _('The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine.') }}</p>
-      <p>{{ _('But wait, there&#x0027;s more...') }}
-      </p>
+    <div class="ap-text-aside-item">
+      <div class="ap-code-snippet">
+{% set code_snippet = '
+  <rdf:RDF
+    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+    xmlns:sm="http://www.mozilla.org/smart-mail/schema#">
+    xmlns:schema="https://schema.org/">
+  <rdf:Description rdf:nodeID="n-101"
+    about="http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox">
+    <sm:message id="4025293">
+      <sm:recipient>
+        Chris Waterson "waterson@google.com"
+      </sm:recipient>
+      <sm:sender>
+        Aunt Helga "helga@ancestry.net"
+      </sm:sender>
+      <sm:received-by>x-wing.mcom.com</sm:received-by>
+      <sm:subject>Great recipe for Banana Bread</sm:subject>
+      <sm:body>
+          <rdf:Description rdf:nodeID="n-201">
+            <schema:name>Aunt Helga\'s World Famous Banana Bread</schema:name>
+            <schema:recipeInstructions>
+              Preheat the oven to 350 degrees. Mix in the ingredients in a bowl.
+              Add the flour last.
+              Pour the mixture into a loaf pan and bake for one hour.
+            </schema:recipeInstructions>
+            <schema:recipeIngredient>
+              3 or 4 ripe bananas, smashed.
+            </schema:recipeIngredient>
+            <schema:recipeIngredient>1 egg</schema:recipeIngredient>
+            <schema:recipeIngredient>3/4 cup of sugar</schema:recipeIngredient>
+            <schema:suitableForDiet>http://schema.org/LowFatDiet</schema:suitableForDiet>
+            <schema:cookTime>PT1H</schema:cookTime>
+            <schema:recipeYield>1 loaf</schema:recipeYield>
+            <schema:prepTime>PT15M</schema:prepTime>
+            <rdf:type rdf:resource="http://schema.org/Recipe"/>
+            <schema:nutrition rdf:nodeID="n-202"/>
+          </rdf:Description>
+          <rdf:Description rdf:nodeID="n-301">
+            <rdf:type rdf:resource="http://schema.org/NutritionInformation"/>
+            <schema:fatContent>9 grams fat</schema:fatContent>
+            <schema:calories>240 calories</schema:calories>
+          </rdf:Description>
+        </sm:body>
+    </sm:message>
+  </rdf:Description>
+  </rdf:RDF>' %}
+  {% set markdown = doc.pod.markdown %}
+  {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
     </div>
+  </div>
+    
+    <div class="ap-text-aside-item">
+      <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
+        <p>
+        {{ _('Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga.') }}
+        </p>
+      </div>
+    </div>
+    <br><br><br>
   </section>
-
-  <section class="ap-section --offset">
-    <div class="ap-text-block" amp-fx="fade-in fly-in-right" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
-      <h2>
-      {{ _('Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;.') }}
-      </h2>
-    </div>
-
-    <div class="ap-text-block" amp-fx="fade-in fly-in-right" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
-      <p>
-      {{ _('Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service.') }}
-      </p>
-      <p>
-      {{ _('Let&#x0027;s go back to our bookmark example. Say that one of my bookmark &#x201C;folders&#x201D; is really a pointer to my email inbox: when I open that folder, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! All the messages that I&#x0027;ve received over night appear.') }}
-      </p>
-      <p>
-      {{ _('But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialised RDF</i>, which is basically just a way of formatting a graph into <a href="https://developer.mozilla.org/en-US/docs/XML_introduction">XML</a>:') }}
-      </p>
-    </div>
-
-    <div class="ap-code-snippet">
-      {% set code_snippet = '
-        <rdf:RDF
-          xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-          xmlns:sm="http://www.mozilla.org/smart-mail/schema#">
-          xmlns:schema="https://schema.org/">
-        <rdf:Description rdf:nodeID="n-101"
-          about="http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox">
-          <sm:message id="4025293">
-            <sm:recipient>
-              Chris Waterson "waterson@google.com"
-            </sm:recipient>
-            <sm:sender>
-              Aunt Helga "helga@ancestry.net"
-            </sm:sender>
-            <sm:received-by>x-wing.mcom.com</sm:received-by>
-            <sm:subject>Great recipe for Banana Bread</sm:subject>
-            <sm:body>
-                <rdf:Description rdf:nodeID="n-201">
-                  <schema:name>Aunt Helga\'s World Famous Banana Bread</schema:name>
-                  <schema:recipeInstructions>
-                    Preheat the oven to 350 degrees. Mix in the ingredients in a bowl.
-                    Add the flour last.
-                    Pour the mixture into a loaf pan and bake for one hour.
-                  </schema:recipeInstructions>
-                  <schema:recipeIngredient>
-                    3 or 4 ripe bananas, smashed.
-                  </schema:recipeIngredient>
-                  <schema:recipeIngredient>1 egg</schema:recipeIngredient>
-                  <schema:recipeIngredient>3/4 cup of sugar</schema:recipeIngredient>
-                  <schema:suitableForDiet>http://schema.org/LowFatDiet</schema:suitableForDiet>
-                  <schema:cookTime>PT1H</schema:cookTime>
-                  <schema:recipeYield>1 loaf</schema:recipeYield>
-                  <schema:prepTime>PT15M</schema:prepTime>
-                  <rdf:type rdf:resource="http://schema.org/Recipe"/>
-                  <schema:nutrition rdf:nodeID="n-202"/>
-                </rdf:Description>
-                <rdf:Description rdf:nodeID="n-301">
-                  <rdf:type rdf:resource="http://schema.org/NutritionInformation"/>
-                  <schema:fatContent>9 grams fat</schema:fatContent>
-                  <schema:calories>240 calories</schema:calories>
-                </rdf:Description>
-              </sm:body>
-          </sm:message>
-        </rdf:Description>
-        </rdf:RDF>
-        ' %}
-      {% set markdown = doc.pod.markdown %}
-      {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
-    </div>
-  </section>
-
-  <section class="ap-section --offset">
-    <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
-      <p>
-      {{ _('Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga.') }}
-      </p>
-    </div>
-  </section>
-<br></br>
+<br><br>
 </main>
