--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -27,7 +27,7 @@ flyout:
     </div>
   </section>
 
-  <section class="ap-section ap-text-aside">
+  <section class="ap-section ap-text-aside --fulscreen">
     <div class="ap-text-aside-item">
       <div class="ap-text-block">
         <p>
@@ -60,9 +60,7 @@ flyout:
         </p>
       </div>
     </div>
-  </section>
 
-  <section class="ap-section ap-text-aside --left">
     <div class="ap-text-aside-item">
       <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
         <h2>
@@ -91,62 +89,9 @@ flyout:
             </div>
         </div>
       </div>
-<!--
-      <div class="ap-text-block ap-code-snippet">
-{% set code_snippet = '
-  <rdf:RDF
-    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-    xmlns:sm="http://www.mozilla.org/smart-mail/schema#">
-    xmlns:schema="https://schema.org/">
-  <rdf:Description rdf:nodeID="n-101"
-    about="http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox">
-    <sm:message id="4025293">
-      <sm:recipient>
-        Chris Waterson "waterson@google.com"
-      </sm:recipient>
-      <sm:sender>
-        Aunt Helga "helga@ancestry.net"
-      </sm:sender>
-      <sm:received-by>x-wing.mcom.com</sm:received-by>
-      <sm:subject>Great recipe for Banana Bread</sm:subject>
-      <sm:body>
-          <rdf:Description rdf:nodeID="n-201">
-            <schema:name>Aunt Helga\'s World Famous Banana Bread</schema:name>
-            <schema:recipeInstructions>
-              Preheat the oven to 350 degrees. Mix in the ingredients in a bowl.
-              Add the flour last.
-              Pour the mixture into a loaf pan and bake for one hour.
-            </schema:recipeInstructions>
-            <schema:recipeIngredient>
-              3 or 4 ripe bananas, smashed.
-            </schema:recipeIngredient>
-            <schema:recipeIngredient>1 egg</schema:recipeIngredient>
-            <schema:recipeIngredient>3/4 cup of sugar</schema:recipeIngredient>
-            <schema:suitableForDiet>http://schema.org/LowFatDiet</schema:suitableForDiet>
-            <schema:cookTime>PT1H</schema:cookTime>
-            <schema:recipeYield>1 loaf</schema:recipeYield>
-            <schema:prepTime>PT15M</schema:prepTime>
-            <rdf:type rdf:resource="http://schema.org/Recipe"/>
-            <schema:nutrition rdf:nodeID="n-202"/>
-          </rdf:Description>
-          <rdf:Description rdf:nodeID="n-301">
-            <rdf:type rdf:resource="http://schema.org/NutritionInformation"/>
-            <schema:fatContent>9 grams fat</schema:fatContent>
-            <schema:calories>240 calories</schema:calories>
-          </rdf:Description>
-        </sm:body>
-    </sm:message>
-  </rdf:Description>
-  </rdf:RDF>' %}
-  {% set markdown = doc.pod.markdown %}
-  {{ markdown.convert('```html\n' + code_snippet + '\n```')|safe }}
     </div>
--->
-    </div>
-  </section>
 
-  <section class="ap-section ap-text-aside">
-  <div class="ap-text-aside-item">
+    <div class="ap-text-aside-item">
       <div class="ap-text-block" amp-fx="fade-in fly-in-left" data-margin-start="5%" data-duration="1s" data-fly-in-distance="5%">
         <p>
         {{ _('Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga.') }}
