--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -5,9 +5,8 @@ descriptions: short description of RDF
 $view: /views/2021/base.html
 
 flyout:
-  format: websites
   description: Structured data
-  icon: amp-websites
+  icon: amp-code-archtecture
 ---
 
 <main>
