--- a/pages/content/amp-dev/about/rdf-in-fifty.html
+++ b/pages/content/amp-dev/about/rdf-in-fifty.html
@@ -5,6 +5,7 @@ descriptions: short description of RDF
 $view: /views/2021/base.html
 
 flyout:
+  format: ontomatica
   description: Structured data
   icon: amp-ontomatica
 ---
