--- a/pages/content/amp-dev/runner/success-stories/index.html
+++ b/pages/content/amp-dev/runner/success-stories/index.html
@@ -1,6 +1,7 @@
 ---
 $title@: Success Stories
-$view: /views/custom.j2
+$view: /views/2021/base.html
+# $view: /views/custom.j2
 $hidden: true
 $path: /runner/success-stories/index.html
 $localization:
