--- a/pages/content/amp-dev/documentation/guides-and-tutorials/index.html
+++ b/pages/content/amp-dev/documentation/guides-and-tutorials/index.html
@@ -1,9 +1,9 @@
-<!-- $view: /views/overview/guides.j2 -->
 ---
 $title: ABC [= format|capitalize =] Guides & Tutorials
 $titles:
   navigation: Guides & Tutorials
 $view: /views/2021/base.html
+# $view: /views/overview/guides.j2
 $path: /documentation/guides-and-tutorials/index.html
 $localization:
   path: /{locale}/documentation/guides-and-tutorials/index.html
