--- a/pages/content/amp-dev/runner/index.html
+++ b/pages/content/amp-dev/runner/index.html
@@ -23,7 +23,7 @@ flyout:
         </div>
       </div>
       <div class="ap-text-block">
-        <h1 class="ap-h1 ap-logo-stage-headline">{{ _('Execute all AMP JavaScript asynchronously') }}</h1>
+        <h1 class="ap-h1 ap-logo-stage-headline">{{ _('Execute all ABC JavaScript asynchronously') }}</h1>
       </div>
     </div>
   </section>
@@ -35,7 +35,7 @@ flyout:
           {{ _('Keep all third-party JavaScript out of the critical path') }}
         </h2>
         <p>{{ _('Third-party JS likes to use synchronous JS loading. They also like to <code>document.write</code> more sync scripts. For example, if you have five ads on your page, and each of them cause three synchronous loads, each with a 1 second latency connection, you’re in 15 seconds of load time just for JS loading.') }}</p>
-        <p>{{ _('AMP pages allow third-party JavaScript but only in sandboxed iframes. By restricting them to iframes, they can’t block the execution of the main page. Even if they trigger multiple style re-calculations, their tiny iframes have very little DOM. ') }}</p>
+        <p>{{ _('ABC pages allow third-party JavaScript but only in sandboxed iframes. By restricting them to iframes, they can’t block the execution of the main page. Even if they trigger multiple style re-calculations, their tiny iframes have very little DOM. ') }}</p>
         <p>{{ _('The time it takes to do style-recalculations and layouts are restricted by DOM size, so the iframe recalculations are very fast compared to recalculating styles and layout for the page.') }}</p>
       </div>
     </div>
