--- a/pages/content/amp-dev/runner/success-stories/index.html
+++ b/pages/content/amp-dev/runner/success-stories/index.html
@@ -129,7 +129,8 @@ stage:
       <div class="ap-o-teaser-grid-list">
         {% for category, stories in categories %}
         {% for teaser_doc in stories %}
-        {% include '/views/partials/teaser.j2' %}
+        {# {% include '/views/partials/teaser.j2' %} #}
+        {% include '/views/partials/teaser-ss.j2' %}
         {% endfor %}
         {% endfor %}
       </div>
