--- a/pages/content/amp-dev/documentation/courses/index.html
+++ b/pages/content/amp-dev/documentation/courses/index.html
@@ -42,6 +42,7 @@ flyout:
         g.doc('/content/amp-dev/documentation/courses/beginning-course/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/intermediate-course/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/advanced-course/index.md', locale=doc.locale),
+        g.doc('/content/amp-dev/documentation/courses/uber-course/index.md', locale=doc.locale),
         ] %}
       {% include '/views/partials/teaser.j2' %}
       {% endfor %}
