--- a/pages/content/amp-dev/documentation/courses/index.html
+++ b/pages/content/amp-dev/documentation/courses/index.html
@@ -43,6 +43,7 @@ flyout:
         g.doc('/content/amp-dev/documentation/courses/intermediate-course/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/advanced-course/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-1/index.md', locale=doc.locale),
+        g.doc('/content/amp-dev/documentation/courses/chapter-2/index.md', locale=doc.locale),
         ] %}
       {% include '/views/partials/teaser.j2' %}
       {% endfor %}
